fixed mobile sidnav spacing and z-indexing

--- a/public/jake-lewis-website1.css
+++ b/public/jake-lewis-website1.css
@@ -656,12 +656,12 @@ nav ul li {
   height: 100%;
   width: 0px;
   position: fixed;
-  z-index: 1;
+  z-index: 100;
   top: 0;
   left: 0;
   overflow-x: hidden;
   transition: 0.5s;
-  padding-top: 60px;
+  padding-top: 20px;
 }
 
 .slideIn a {
@@ -682,13 +682,17 @@ nav ul li {
   width: 200px;
   height: 100%;
   position: fixed;
-  z-index: 1;
+  z-index: 100;
   top: 0;
   left: 0;
   overflow-x: hidden;
   transition: 0.5s;
-  padding-top: 60px;
+  padding-top: 20px;
   background-color: white;
+}
+
+#sidebar {
+  z-index: 101;
 }
 
 .slideOut a {
